@@ -69,7 +69,7 @@ import java.text.DateFormat ;
 public final class Seigen extends Authenticator
 {
    private static String copyright =            	// Copyright text
-      "Kisekae UltraKiss V3.7 (c) 2002-2024 William Miles" ;
+      "Kisekae UltraKiss V3.7.1 (c) 2002-2024 William Miles" ;
 
    private static Calendar warningdate = Calendar.getInstance() ;
    private static Calendar restrictdate = Calendar.getInstance() ;
@@ -150,7 +150,11 @@ public final class Seigen extends Authenticator
    private static String b64encode(String s)
    {
       if (s == null || s.length() == 0) return "" ;
-      try { return (new sun.misc.BASE64Encoder().encode(s.getBytes())) ; }
+      try 
+      { 
+         byte[] encoded = Base64.getEncoder().encode(s.getBytes()) ; 
+         return Arrays.toString(encoded) ;
+      }
       catch (SecurityException e) { }
       return "" ;
    }
